TP_4/TP4Bison.output
Terminals unused in grammar

   CARACTER


Estado 24 conflictos: 1 desplazamiento(s)/reducción(ones)
Estado 38 conflictos: 2 desplazamiento(s)/reducción(ones)
Estado 39 conflictos: 1 desplazamiento(s)/reducción(ones)
Estado 42 conflictos: 1 desplazamiento(s)/reducción(ones)
Estado 75 conflictos: 1 desplazamiento/reducción, 3 reducción/reducción
Estado 76 conflictos: 8 desplazamiento(s)/reducción(ones)
Estado 77 conflictos: 8 desplazamiento(s)/reducción(ones)
Estado 78 conflictos: 8 desplazamiento(s)/reducción(ones)
Estado 83 conflictos: 1 desplazamiento(s)/reducción(ones)
Estado 114 conflictos: 1 desplazamiento(s)/reducción(ones)
Estado 115 conflictos: 1 desplazamiento(s)/reducción(ones)
Estado 118 conflictos: 1 reducción(ones)/reducción(ones)
Estado 131 conflictos: 1 reducción(ones)/reducción(ones)
Estado 144 conflictos: 2 desplazamiento(s)/reducción(ones)
Estado 145 conflictos: 1 desplazamiento(s)/reducción(ones)
Estado 146 conflictos: 1 desplazamiento(s)/reducción(ones)
Estado 165 conflictos: 1 desplazamiento(s)/reducción(ones)
Estado 178 conflictos: 1 desplazamiento(s)/reducción(ones)
Estado 189 conflictos: 1 desplazamiento(s)/reducción(ones)
Estado 222 conflictos: 2 reducción(ones)/reducción(ones)
Estado 251 conflictos: 1 desplazamiento(s)/reducción(ones)


Gramática

    0 $accept: input $end

    1 input: /* vacío */
    2      | input line

    3 line: '\n'
    4     | sentencia '\n'

    5 declaracion: especificadoresDeclaracion listaDeclaradoresOP

    6 listaDeclaradoresOP: /* vacío */
    7                    | listaDeclaradores

    8 especificadoresDeclaracion: especificadorClaseAlmacenamiento especificadoresDeclaracionOP
    9                           | especificadorTipo especificadoresDeclaracionOP
   10                           | calificadorTipo especificadoresDeclaracionOP

   11 especificadoresDeclaracionOP: /* vacío */
   12                             | especificadoresDeclaracion

   13 listaDeclaradores: declarador
   14                  | listaDeclaradores ',' declarador

   15 declarador: decla
   16           | decla '=' inicializador

   17 inicializador: expAsignacion
   18              | '{' listaInicializadores '}'
   19              | '{' listaInicializadores ',' '}'

   20 listaInicializadores: inicializador
   21                     | listaInicializadores ',' inicializador

   22 especificadorClaseAlmacenamiento: ESPECIFICADOR_ALMACENAMIENTO

   23 especificadorTipo: ESPECIFICADOR_TIPO
   24                  | especificadorStructOUnion
   25                  | especificadorEnum
   26                  | nombreTypedef

   27 calificadorTipo: CONST
   28                | VOLATILE

   29 especificadorStructOUnion: structOUnion identificadorOP '{' listaDeclaracionesStruct '}'
   30                          | structOUnion IDENTIFICADOR

   31 identificadorOP: /* vacío */
   32                | IDENTIFICADOR

   33 structOUnion: STRUCT
   34             | UNION

   35 listaDeclaracionesStruct: declaracionStruct ';'
   36                         | listaDeclaracionesStruct declaracionStruct

   37 declaracionStruct: listaCalificadores declaradoresStruct ';'

   38 listaCalificadores: especificadorTipo listaCalificadoresOP
   39                   | calificadorTipo listaCalificadoresOP

   40 listaCalificadoresOP: /* vacío */
   41                     | listaCalificadores

   42 declaradoresStruct: declaStruct
   43                   | declaradoresStruct ',' declaStruct

   44 declaStruct: decla
   45            | declaOP ':' expConstante

   46 decla: punteroOP declaradorDirecto

   47 declaOP: /* vacío */
   48        | decla

   49 puntero: '*' listaCalificadoresTiposOP
   50        | '*' listaCalificadoresTiposOP puntero

   51 punteroOP: /* vacío */
   52          | puntero

   53 listaCalificadoresTipos: calificadorTipo
   54                        | listaCalificadoresTipos calificadorTipo

   55 listaCalificadoresTiposOP: /* vacío */
   56                          | listaCalificadoresTipos

   57 declaradorDirecto: IDENTIFICADOR
   58                  | '(' decla ')'
   59                  | declaradorDirecto '[' expConstanteOP ']'
   60                  | declaradorDirecto '(' listaTiposParametros ')'
   61                  | declaradorDirecto '(' listaIdentificadoresOP ')'
   62                  | error

   63 listaTiposParametros: listaParametros
   64                     | listaParametros ',' '.' '.' '.'

   65 listaTiposParametrosOP: /* vacío */
   66                       | listaTiposParametros

   67 listaParametros: declaracionParametro
   68                | listaParametros ',' declaracionParametro

   69 declaracionParametro: especificadoresDeclaracion decla
   70                     | especificadoresDeclaracion declaradorAbstractoOP

   71 listaIdentificadores: IDENTIFICADOR
   72                     | listaIdentificadores ',' IDENTIFICADOR

   73 listaIdentificadoresOP: /* vacío */
   74                       | listaIdentificadores

   75 especificadorEnum: ENUM identificadorOP '{' listaEnumeradores '}'
   76                  | ENUM IDENTIFICADOR

   77 listaEnumeradores: enumerador
   78                  | listaEnumeradores ',' enumerador

   79 enumerador: constanteEnumeracion
   80           | constanteEnumeracion OPER_ASIGNACION expConstante

   81 constanteEnumeracion: IDENTIFICADOR

   82 nombreTypedef: IDENTIFICADOR

   83 nombreTipo: listaCalificadores declaradorAbstractoOP

   84 declaradorAbstracto: puntero
   85                    | punteroOP declaradorAbstractoDirecto

   86 declaradorAbstractoOP: /* vacío */
   87                      | declaradorAbstracto

   88 declaradorAbstractoDirecto: '(' declaradorAbstracto ')'
   89                           | declaradorAbstractoDirectoOP '[' expConstanteOP ']'
   90                           | declaradorAbstractoDirectoOP '(' listaTiposParametrosOP ')'

   91 declaradorAbstractoDirectoOP: /* vacío */
   92                             | declaradorAbstractoDirecto

   93 expresion: expAsignacion
   94          | expresion ',' expAsignacion

   95 expresionOP: /* vacío */
   96            | expresion

   97 expAsignacion: expCondicional
   98              | expUnaria operAsignacion expAsignacion

   99 operAsignacion: OPER_ASIGNACION

  100 expConstante: expCondicional

  101 expConstanteOP: /* vacío */
  102               | expConstante

  103 expCondicional: expOr

  104 expOr: expAnd
  105      | expOr OPER_OR expAnd

  106 expAnd: expIgualdad
  107       | expAnd OPER_AND expIgualdad

  108 expIgualdad: expRelacional
  109            | expIgualdad OPER_IGUALDAD expRelacional
  110            | expIgualdad OPER_DIFERENCIA expRelacional

  111 expRelacional: expAditiva
  112              | expRelacional OPER_RELACIONAL expAditiva

  113 expAditiva: expMultiplicativa
  114           | expAditiva '+' expMultiplicativa
  115           | expAditiva '-' expMultiplicativa

  116 expMultiplicativa: expUnaria
  117                  | expMultiplicativa '*' expUnaria
  118                  | expMultiplicativa '/' expUnaria
  119                  | expMultiplicativa '%' expUnaria

  120 expUnaria: expPostfijo
  121          | OPER_INC_DEC expUnaria
  122          | operUnario expUnaria
  123          | SIZEOF '(' nombreTipo ')'

  124 operUnario: OPER_DIRECCION
  125           | '*'
  126           | '-'
  127           | '+'
  128           | OPER_NEGACION

  129 expPostfijo: expPrimaria
  130            | expPostfijo '[' expresion ']'
  131            | expPostfijo '(' listaArgumentosOP ')'

  132 listaArgumentosOP: /* vacío */
  133                  | listaArgumentos

  134 listaArgumentos: expAsignacion
  135                | listaArgumentos ',' expAsignacion

  136 expPrimaria: IDENTIFICADOR
  137            | NUM
  138            | CONS_REAL
  139            | LIT_CADENA
  140            | '(' expresion ')'
  141            | error

  142 sentencia: sentCompuesta
  143          | sentExpresion
  144          | sentSeleccion
  145          | sentIteracion
  146          | sentEtiquetada
  147          | sentSalto

  148 sentCompuesta: '{' listaDeclaracionesOP listaSentenciasOP '}'

  149 listaDeclaraciones: declaracion
  150                   | listaDeclaraciones declaracion

  151 listaDeclaracionesOP: /* vacío */
  152                     | listaDeclaraciones

  153 listaSentencias: sentencia
  154                | listaSentencias sentencia

  155 listaSentenciasOP: /* vacío */
  156                  | listaSentencias

  157 sentExpresion: expresionOP ';'

  158 sentSeleccion: IF '(' expresion ')' sentencia
  159              | IF '(' expresion ')' sentencia ELSE sentencia
  160              | SWITCH '(' expresion ')' sentencia

  161 sentIteracion: WHILE '(' expresion ')' sentencia
  162              | DO sentencia WHILE '(' expresion ')' ';'
  163              | FOR '(' expresionOP ';' expresionOP ';' expresionOP ')' sentencia

  164 sentEtiquetada: CASE expresion ':' sentencia
  165               | DEFAULT ':' sentencia
  166               | IDENTIFICADOR ':' sentencia

  167 sentSalto: RETURN expresionOP ';'
  168          | CONTINUE ';'
  169          | BREAK ';'
  170          | GOTO IDENTIFICADOR ';'


Terminales con las reglas donde aparecen

$end (0) 0
'\n' (10) 3 4
'%' (37) 119
'(' (40) 58 60 61 88 90 123 131 140 158 159 160 161 162 163
')' (41) 58 60 61 88 90 123 131 140 158 159 160 161 162 163
'*' (42) 49 50 117 125
'+' (43) 114 127
',' (44) 14 19 21 43 64 68 72 78 94 135
'-' (45) 115 126
'.' (46) 64
'/' (47) 118
':' (58) 45 164 165 166
';' (59) 35 37 157 162 163 167 168 169 170
'=' (61) 16
'[' (91) 59 89 130
']' (93) 59 89 130
'{' (123) 18 19 29 75 148
'}' (125) 18 19 29 75 148
error (256) 62 141
NUM (258) 137
CONS_REAL (259) 138
IDENTIFICADOR (260) 30 32 57 71 72 76 81 82 136 166 170
ESPECIFICADOR_TIPO (261) 23
LIT_CADENA (262) 139
CARACTER (263)
FOR (264) 163
WHILE (265) 161 162
DO (266) 162
SWITCH (267) 160
GOTO (268) 170
CONTINUE (269) 168
BREAK (270) 169
CASE (271) 164
DEFAULT (272) 165
RETURN (273) 167
IF (274) 158 159
ELSE (275) 159
SIZEOF (276) 123
STRUCT (277) 33
UNION (278) 34
CONST (279) 27
VOLATILE (280) 28
ENUM (281) 75 76
OPER_ASIGNACION (282) 80 99
OPER_OR (283) 105
OPER_AND (284) 107
OPER_IGUALDAD (285) 109
OPER_DIFERENCIA (286) 110
OPER_RELACIONAL (287) 112
OPER_INC_DEC (288) 121
OPER_NEGACION (289) 128
OPER_DIRECCION (290) 124
ESPECIFICADOR_ALMACENAMIENTO (291) 22


No terminales con las reglas donde aparecen

$accept (54)
    en la izquierda: 0
input (55)
    en la izquierda: 1 2, en la derecha: 0 2
line (56)
    en la izquierda: 3 4, en la derecha: 2
declaracion (57)
    en la izquierda: 5, en la derecha: 149 150
listaDeclaradoresOP (58)
    en la izquierda: 6 7, en la derecha: 5
especificadoresDeclaracion (59)
    en la izquierda: 8 9 10, en la derecha: 5 12 69 70
especificadoresDeclaracionOP (60)
    en la izquierda: 11 12, en la derecha: 8 9 10
listaDeclaradores (61)
    en la izquierda: 13 14, en la derecha: 7 14
declarador (62)
    en la izquierda: 15 16, en la derecha: 13 14
inicializador (63)
    en la izquierda: 17 18 19, en la derecha: 16 20 21
listaInicializadores (64)
    en la izquierda: 20 21, en la derecha: 18 19 21
especificadorClaseAlmacenamiento (65)
    en la izquierda: 22, en la derecha: 8
especificadorTipo (66)
    en la izquierda: 23 24 25 26, en la derecha: 9 38
calificadorTipo (67)
    en la izquierda: 27 28, en la derecha: 10 39 53 54
especificadorStructOUnion (68)
    en la izquierda: 29 30, en la derecha: 24
identificadorOP (69)
    en la izquierda: 31 32, en la derecha: 29 75
structOUnion (70)
    en la izquierda: 33 34, en la derecha: 29 30
listaDeclaracionesStruct (71)
    en la izquierda: 35 36, en la derecha: 29 36
declaracionStruct (72)
    en la izquierda: 37, en la derecha: 35 36
listaCalificadores (73)
    en la izquierda: 38 39, en la derecha: 37 41 83
listaCalificadoresOP (74)
    en la izquierda: 40 41, en la derecha: 38 39
declaradoresStruct (75)
    en la izquierda: 42 43, en la derecha: 37 43
declaStruct (76)
    en la izquierda: 44 45, en la derecha: 42 43
decla (77)
    en la izquierda: 46, en la derecha: 15 16 44 48 58 69
declaOP (78)
    en la izquierda: 47 48, en la derecha: 45
puntero (79)
    en la izquierda: 49 50, en la derecha: 50 52 84
punteroOP (80)
    en la izquierda: 51 52, en la derecha: 46 85
listaCalificadoresTipos (81)
    en la izquierda: 53 54, en la derecha: 54 56
listaCalificadoresTiposOP (82)
    en la izquierda: 55 56, en la derecha: 49 50
declaradorDirecto (83)
    en la izquierda: 57 58 59 60 61 62, en la derecha: 46 59 60 61
listaTiposParametros (84)
    en la izquierda: 63 64, en la derecha: 60 66
listaTiposParametrosOP (85)
    en la izquierda: 65 66, en la derecha: 90
listaParametros (86)
    en la izquierda: 67 68, en la derecha: 63 64 68
declaracionParametro (87)
    en la izquierda: 69 70, en la derecha: 67 68
listaIdentificadores (88)
    en la izquierda: 71 72, en la derecha: 72 74
listaIdentificadoresOP (89)
    en la izquierda: 73 74, en la derecha: 61
especificadorEnum (90)
    en la izquierda: 75 76, en la derecha: 25
listaEnumeradores (91)
    en la izquierda: 77 78, en la derecha: 75 78
enumerador (92)
    en la izquierda: 79 80, en la derecha: 77 78
constanteEnumeracion (93)
    en la izquierda: 81, en la derecha: 79 80
nombreTypedef (94)
    en la izquierda: 82, en la derecha: 26
nombreTipo (95)
    en la izquierda: 83, en la derecha: 123
declaradorAbstracto (96)
    en la izquierda: 84 85, en la derecha: 87 88
declaradorAbstractoOP (97)
    en la izquierda: 86 87, en la derecha: 70 83
declaradorAbstractoDirecto (98)
    en la izquierda: 88 89 90, en la derecha: 85 92
declaradorAbstractoDirectoOP (99)
    en la izquierda: 91 92, en la derecha: 89 90
expresion (100)
    en la izquierda: 93 94, en la derecha: 94 96 130 140 158 159 160
    161 162 164
expresionOP (101)
    en la izquierda: 95 96, en la derecha: 157 163 167
expAsignacion (102)
    en la izquierda: 97 98, en la derecha: 17 93 94 98 134 135
operAsignacion (103)
    en la izquierda: 99, en la derecha: 98
expConstante (104)
    en la izquierda: 100, en la derecha: 45 80 102
expConstanteOP (105)
    en la izquierda: 101 102, en la derecha: 59 89
expCondicional (106)
    en la izquierda: 103, en la derecha: 97 100
expOr (107)
    en la izquierda: 104 105, en la derecha: 103 105
expAnd (108)
    en la izquierda: 106 107, en la derecha: 104 105 107
expIgualdad (109)
    en la izquierda: 108 109 110, en la derecha: 106 107 109 110
expRelacional (110)
    en la izquierda: 111 112, en la derecha: 108 109 110 112
expAditiva (111)
    en la izquierda: 113 114 115, en la derecha: 111 112 114 115
expMultiplicativa (112)
    en la izquierda: 116 117 118 119, en la derecha: 113 114 115 117
    118 119
expUnaria (113)
    en la izquierda: 120 121 122 123, en la derecha: 98 116 117 118
    119 121 122
operUnario (114)
    en la izquierda: 124 125 126 127 128, en la derecha: 122
expPostfijo (115)
    en la izquierda: 129 130 131, en la derecha: 120 130 131
listaArgumentosOP (116)
    en la izquierda: 132 133, en la derecha: 131
listaArgumentos (117)
    en la izquierda: 134 135, en la derecha: 133 135
expPrimaria (118)
    en la izquierda: 136 137 138 139 140 141, en la derecha: 129
sentencia (119)
    en la izquierda: 142 143 144 145 146 147, en la derecha: 4 153
    154 158 159 160 161 162 163 164 165 166
sentCompuesta (120)
    en la izquierda: 148, en la derecha: 142
listaDeclaraciones (121)
    en la izquierda: 149 150, en la derecha: 150 152
listaDeclaracionesOP (122)
    en la izquierda: 151 152, en la derecha: 148
listaSentencias (123)
    en la izquierda: 153 154, en la derecha: 154 156
listaSentenciasOP (124)
    en la izquierda: 155 156, en la derecha: 148
sentExpresion (125)
    en la izquierda: 157, en la derecha: 143
sentSeleccion (126)
    en la izquierda: 158 159 160, en la derecha: 144
sentIteracion (127)
    en la izquierda: 161 162 163, en la derecha: 145
sentEtiquetada (128)
    en la izquierda: 164 165 166, en la derecha: 146
sentSalto (129)
    en la izquierda: 167 168 169 170, en la derecha: 147


estado 0

    0 $accept: . input $end

    $default  reduce usando la regla 1 (input)

    input  ir al estado 1


estado 1

    0 $accept: input . $end
    2 input: input . line

    $end            desplazar e ir al estado 2
    error           desplazar e ir al estado 3
    NUM             desplazar e ir al estado 4
    CONS_REAL       desplazar e ir al estado 5
    IDENTIFICADOR   desplazar e ir al estado 6
    LIT_CADENA      desplazar e ir al estado 7
    FOR             desplazar e ir al estado 8
    WHILE           desplazar e ir al estado 9
    DO              desplazar e ir al estado 10
    SWITCH          desplazar e ir al estado 11
    GOTO            desplazar e ir al estado 12
    CONTINUE        desplazar e ir al estado 13
    BREAK           desplazar e ir al estado 14
    CASE            desplazar e ir al estado 15
    DEFAULT         desplazar e ir al estado 16
    RETURN          desplazar e ir al estado 17
    IF              desplazar e ir al estado 18
    SIZEOF          desplazar e ir al estado 19
    OPER_INC_DEC    desplazar e ir al estado 20
    OPER_NEGACION   desplazar e ir al estado 21
    OPER_DIRECCION  desplazar e ir al estado 22
    '\n'            desplazar e ir al estado 23
    '{'             desplazar e ir al estado 24
    '*'             desplazar e ir al estado 25
    '('             desplazar e ir al estado 26
    '+'             desplazar e ir al estado 27
    '-'             desplazar e ir al estado 28

    ';'  reduce usando la regla 95 (expresionOP)

    line               ir al estado 29
    expresion          ir al estado 30
    expresionOP        ir al estado 31
    expAsignacion      ir al estado 32
    expCondicional     ir al estado 33
    expOr              ir al estado 34
    expAnd             ir al estado 35
    expIgualdad        ir al estado 36
    expRelacional      ir al estado 37
    expAditiva         ir al estado 38
    expMultiplicativa  ir al estado 39
    expUnaria          ir al estado 40
    operUnario         ir al estado 41
    expPostfijo        ir al estado 42
    expPrimaria        ir al estado 43
    sentencia          ir al estado 44
    sentCompuesta      ir al estado 45
    sentExpresion      ir al estado 46
    sentSeleccion      ir al estado 47
    sentIteracion      ir al estado 48
    sentEtiquetada     ir al estado 49
    sentSalto          ir al estado 50


estado 2

    0 $accept: input $end .

    $default  aceptar


estado 3

  141 expPrimaria: error .

    $default  reduce usando la regla 141 (expPrimaria)


estado 4

  137 expPrimaria: NUM .

    $default  reduce usando la regla 137 (expPrimaria)


estado 5

  138 expPrimaria: CONS_REAL .

    $default  reduce usando la regla 138 (expPrimaria)


estado 6

  136 expPrimaria: IDENTIFICADOR .
  166 sentEtiquetada: IDENTIFICADOR . ':' sentencia

    ':'  desplazar e ir al estado 51

    $default  reduce usando la regla 136 (expPrimaria)


estado 7

  139 expPrimaria: LIT_CADENA .

    $default  reduce usando la regla 139 (expPrimaria)


estado 8

  163 sentIteracion: FOR . '(' expresionOP ';' expresionOP ';' expresionOP ')' sentencia

    '('  desplazar e ir al estado 52


estado 9

  161 sentIteracion: WHILE . '(' expresion ')' sentencia

    '('  desplazar e ir al estado 53


estado 10

  162 sentIteracion: DO . sentencia WHILE '(' expresion ')' ';'

    error           desplazar e ir al estado 3
    NUM             desplazar e ir al estado 4
    CONS_REAL       desplazar e ir al estado 5
    IDENTIFICADOR   desplazar e ir al estado 6
    LIT_CADENA      desplazar e ir al estado 7
    FOR             desplazar e ir al estado 8
    WHILE           desplazar e ir al estado 9
    DO              desplazar e ir al estado 10
    SWITCH          desplazar e ir al estado 11
    GOTO            desplazar e ir al estado 12
    CONTINUE        desplazar e ir al estado 13
    BREAK           desplazar e ir al estado 14
    CASE            desplazar e ir al estado 15
    DEFAULT         desplazar e ir al estado 16
    RETURN          desplazar e ir al estado 17
    IF              desplazar e ir al estado 18
    SIZEOF          desplazar e ir al estado 19
    OPER_INC_DEC    desplazar e ir al estado 20
    OPER_NEGACION   desplazar e ir al estado 21
    OPER_DIRECCION  desplazar e ir al estado 22
    '{'             desplazar e ir al estado 24
    '*'             desplazar e ir al estado 25
    '('             desplazar e ir al estado 26
    '+'             desplazar e ir al estado 27
    '-'             desplazar e ir al estado 28

    ';'  reduce usando la regla 95 (expresionOP)

    expresion          ir al estado 30
    expresionOP        ir al estado 31
    expAsignacion      ir al estado 32
    expCondicional     ir al estado 33
    expOr              ir al estado 34
    expAnd             ir al estado 35
    expIgualdad        ir al estado 36
    expRelacional      ir al estado 37
    expAditiva         ir al estado 38
    expMultiplicativa  ir al estado 39
    expUnaria          ir al estado 40
    operUnario         ir al estado 41
    expPostfijo        ir al estado 42
    expPrimaria        ir al estado 43
    sentencia          ir al estado 54
    sentCompuesta      ir al estado 45
    sentExpresion      ir al estado 46
    sentSeleccion      ir al estado 47
    sentIteracion      ir al estado 48
    sentEtiquetada     ir al estado 49
    sentSalto          ir al estado 50


estado 11

  160 sentSeleccion: SWITCH . '(' expresion ')' sentencia

    '('  desplazar e ir al estado 55


estado 12

  170 sentSalto: GOTO . IDENTIFICADOR ';'

    IDENTIFICADOR  desplazar e ir al estado 56


estado 13

  168 sentSalto: CONTINUE . ';'

    ';'  desplazar e ir al estado 57


estado 14

  169 sentSalto: BREAK . ';'

    ';'  desplazar e ir al estado 58


estado 15

  164 sentEtiquetada: CASE . expresion ':' sentencia

    error           desplazar e ir al estado 3
    NUM             desplazar e ir al estado 4
    CONS_REAL       desplazar e ir al estado 5
    IDENTIFICADOR   desplazar e ir al estado 59
    LIT_CADENA      desplazar e ir al estado 7
    SIZEOF          desplazar e ir al estado 19
    OPER_INC_DEC    desplazar e ir al estado 20
    OPER_NEGACION   desplazar e ir al estado 21
    OPER_DIRECCION  desplazar e ir al estado 22
    '*'             desplazar e ir al estado 25
    '('             desplazar e ir al estado 26
    '+'             desplazar e ir al estado 27
    '-'             desplazar e ir al estado 28

    expresion          ir al estado 60
    expAsignacion      ir al estado 32
    expCondicional     ir al estado 33
    expOr              ir al estado 34
    expAnd             ir al estado 35
    expIgualdad        ir al estado 36
    expRelacional      ir al estado 37
    expAditiva         ir al estado 38
    expMultiplicativa  ir al estado 39
    expUnaria          ir al estado 40
    operUnario         ir al estado 41
    expPostfijo        ir al estado 42
    expPrimaria        ir al estado 43


estado 16

  165 sentEtiquetada: DEFAULT . ':' sentencia

    ':'  desplazar e ir al estado 61


estado 17

  167 sentSalto: RETURN . expresionOP ';'

    error           desplazar e ir al estado 3
    NUM             desplazar e ir al estado 4
    CONS_REAL       desplazar e ir al estado 5
    IDENTIFICADOR   desplazar e ir al estado 59
    LIT_CADENA      desplazar e ir al estado 7
    SIZEOF          desplazar e ir al estado 19
    OPER_INC_DEC    desplazar e ir al estado 20
    OPER_NEGACION   desplazar e ir al estado 21
    OPER_DIRECCION  desplazar e ir al estado 22
    '*'             desplazar e ir al estado 25
    '('             desplazar e ir al estado 26
    '+'             desplazar e ir al estado 27
    '-'             desplazar e ir al estado 28

    ';'  reduce usando la regla 95 (expresionOP)

    expresion          ir al estado 30
    expresionOP        ir al estado 62
    expAsignacion      ir al estado 32
    expCondicional     ir al estado 33
    expOr              ir al estado 34
    expAnd             ir al estado 35
    expIgualdad        ir al estado 36
    expRelacional      ir al estado 37
    expAditiva         ir al estado 38
    expMultiplicativa  ir al estado 39
    expUnaria          ir al estado 40
    operUnario         ir al estado 41
    expPostfijo        ir al estado 42
    expPrimaria        ir al estado 43


estado 18

  158 sentSeleccion: IF . '(' expresion ')' sentencia
  159              | IF . '(' expresion ')' sentencia ELSE sentencia

    '('  desplazar e ir al estado 63


estado 19

  123 expUnaria: SIZEOF . '(' nombreTipo ')'

    '('  desplazar e ir al estado 64


estado 20

  121 expUnaria: OPER_INC_DEC . expUnaria

    error           desplazar e ir al estado 3
    NUM             desplazar e ir al estado 4
    CONS_REAL       desplazar e ir al estado 5
    IDENTIFICADOR   desplazar e ir al estado 59
    LIT_CADENA      desplazar e ir al estado 7
    SIZEOF          desplazar e ir al estado 19
    OPER_INC_DEC    desplazar e ir al estado 20
    OPER_NEGACION   desplazar e ir al estado 21
    OPER_DIRECCION  desplazar e ir al estado 22
    '*'             desplazar e ir al estado 25
    '('             desplazar e ir al estado 26
    '+'             desplazar e ir al estado 27
    '-'             desplazar e ir al estado 28

    expUnaria    ir al estado 65
    operUnario   ir al estado 41
    expPostfijo  ir al estado 42
    expPrimaria  ir al estado 43


estado 21

  128 operUnario: OPER_NEGACION .

    $default  reduce usando la regla 128 (operUnario)


estado 22

  124 operUnario: OPER_DIRECCION .

    $default  reduce usando la regla 124 (operUnario)


estado 23

    3 line: '\n' .

    $default  reduce usando la regla 3 (line)


estado 24

  148 sentCompuesta: '{' . listaDeclaracionesOP listaSentenciasOP '}'

    IDENTIFICADOR                 desplazar e ir al estado 66
    ESPECIFICADOR_TIPO            desplazar e ir al estado 67
    STRUCT                        desplazar e ir al estado 68
    UNION                         desplazar e ir al estado 69
    CONST                         desplazar e ir al estado 70
    VOLATILE                      desplazar e ir al estado 71
    ENUM                          desplazar e ir al estado 72
    ESPECIFICADOR_ALMACENAMIENTO  desplazar e ir al estado 73

    IDENTIFICADOR  [reduce usando la regla 151 (listaDeclaracionesOP)]
    $default       reduce usando la regla 151 (listaDeclaracionesOP)

    declaracion                       ir al estado 74
    especificadoresDeclaracion        ir al estado 75
    especificadorClaseAlmacenamiento  ir al estado 76
    especificadorTipo                 ir al estado 77
    calificadorTipo                   ir al estado 78
    especificadorStructOUnion         ir al estado 79
    structOUnion                      ir al estado 80
    especificadorEnum                 ir al estado 81
    nombreTypedef                     ir al estado 82
    listaDeclaraciones                ir al estado 83
    listaDeclaracionesOP              ir al estado 84


estado 25

  125 operUnario: '*' .

    $default  reduce usando la regla 125 (operUnario)


estado 26

  140 expPrimaria: '(' . expresion ')'

    error           desplazar e ir al estado 3
    NUM             desplazar e ir al estado 4
    CONS_REAL       desplazar e ir al estado 5
    IDENTIFICADOR   desplazar e ir al estado 59
    LIT_CADENA      desplazar e ir al estado 7
    SIZEOF          desplazar e ir al estado 19
    OPER_INC_DEC    desplazar e ir al estado 20
    OPER_NEGACION   desplazar e ir al estado 21
    OPER_DIRECCION  desplazar e ir al estado 22
    '*'             desplazar e ir al estado 25
    '('             desplazar e ir al estado 26
    '+'             desplazar e ir al estado 27
    '-'             desplazar e ir al estado 28

    expresion          ir al estado 85
    expAsignacion      ir al estado 32
    expCondicional     ir al estado 33
    expOr              ir al estado 34
    expAnd             ir al estado 35
    expIgualdad        ir al estado 36
    expRelacional      ir al estado 37
    expAditiva         ir al estado 38
    expMultiplicativa  ir al estado 39
    expUnaria          ir al estado 40
    operUnario         ir al estado 41
    expPostfijo        ir al estado 42
    expPrimaria        ir al estado 43


estado 27

  127 operUnario: '+' .

    $default  reduce usando la regla 127 (operUnario)


estado 28

  126 operUnario: '-' .

    $default  reduce usando la regla 126 (operUnario)


estado 29

    2 input: input line .

    $default  reduce usando la regla 2 (input)


estado 30

   94 expresion: expresion . ',' expAsignacion
   96 expresionOP: expresion .

    ','  desplazar e ir al estado 86

    $default  reduce usando la regla 96 (expresionOP)


estado 31

  157 sentExpresion: expresionOP . ';'

    ';'  desplazar e ir al estado 87


estado 32

   93 expresion: expAsignacion .

    $default  reduce usando la regla 93 (expresion)


estado 33

   97 expAsignacion: expCondicional .

    $default  reduce usando la regla 97 (expAsignacion)


estado 34

  103 expCondicional: expOr .
  105 expOr: expOr . OPER_OR expAnd

    OPER_OR  desplazar e ir al estado 88

    $default  reduce usando la regla 103 (expCondicional)


estado 35

  104 expOr: expAnd .
  107 expAnd: expAnd . OPER_AND expIgualdad

    OPER_AND  desplazar e ir al estado 89

    $default  reduce usando la regla 104 (expOr)


estado 36

  106 expAnd: expIgualdad .
  109 expIgualdad: expIgualdad . OPER_IGUALDAD expRelacional
  110            | expIgualdad . OPER_DIFERENCIA expRelacional

    OPER_IGUALDAD    desplazar e ir al estado 90
    OPER_DIFERENCIA  desplazar e ir al estado 91

    $default  reduce usando la regla 106 (expAnd)


estado 37

  108 expIgualdad: expRelacional .
  112 expRelacional: expRelacional . OPER_RELACIONAL expAditiva

    OPER_RELACIONAL  desplazar e ir al estado 92

    $default  reduce usando la regla 108 (expIgualdad)


estado 38

  111 expRelacional: expAditiva .
  114 expAditiva: expAditiva . '+' expMultiplicativa
  115           | expAditiva . '-' expMultiplicativa

    '+'  desplazar e ir al estado 93
    '-'  desplazar e ir al estado 94

    '+'       [reduce usando la regla 111 (expRelacional)]
    '-'       [reduce usando la regla 111 (expRelacional)]
    $default  reduce usando la regla 111 (expRelacional)


estado 39

  113 expAditiva: expMultiplicativa .
  117 expMultiplicativa: expMultiplicativa . '*' expUnaria
  118                  | expMultiplicativa . '/' expUnaria
  119                  | expMultiplicativa . '%' expUnaria

    '*'  desplazar e ir al estado 95
    '/'  desplazar e ir al estado 96
    '%'  desplazar e ir al estado 97

    '*'       [reduce usando la regla 113 (expAditiva)]
    $default  reduce usando la regla 113 (expAditiva)


estado 40

   98 expAsignacion: expUnaria . operAsignacion expAsignacion
  116 expMultiplicativa: expUnaria .

    OPER_ASIGNACION  desplazar e ir al estado 98

    $default  reduce usando la regla 116 (expMultiplicativa)

    operAsignacion  ir al estado 99


estado 41

  122 expUnaria: operUnario . expUnaria

    error           desplazar e ir al estado 3
    NUM             desplazar e ir al estado 4
    CONS_REAL       desplazar e ir al estado 5
    IDENTIFICADOR   desplazar e ir al estado 59
    LIT_CADENA      desplazar e ir al estado 7
    SIZEOF          desplazar e ir al estado 19
    OPER_INC_DEC    desplazar e ir al estado 20
    OPER_NEGACION   desplazar e ir al estado 21
    OPER_DIRECCION  desplazar e ir al estado 22
    '*'             desplazar e ir al estado 25
    '('             desplazar e ir al estado 26
    '+'             desplazar e ir al estado 27
    '-'             desplazar e ir al estado 28

    expUnaria    ir al estado 100
    operUnario   ir al estado 41
    expPostfijo  ir al estado 42
    expPrimaria  ir al estado 43


estado 42

  120 expUnaria: expPostfijo .
  130 expPostfijo: expPostfijo . '[' expresion ']'
  131            | expPostfijo . '(' listaArgumentosOP ')'

    '('  desplazar e ir al estado 101
    '['  desplazar e ir al estado 102

    '('       [reduce usando la regla 120 (expUnaria)]
    $default  reduce usando la regla 120 (expUnaria)


estado 43

  129 expPostfijo: expPrimaria .

    $default  reduce usando la regla 129 (expPostfijo)


estado 44

    4 line: sentencia . '\n'

    '\n'  desplazar e ir al estado 103


estado 45

  142 sentencia: sentCompuesta .

    $default  reduce usando la regla 142 (sentencia)


estado 46

  143 sentencia: sentExpresion .

    $default  reduce usando la regla 143 (sentencia)


estado 47

  144 sentencia: sentSeleccion .

    $default  reduce usando la regla 144 (sentencia)


estado 48

  145 sentencia: sentIteracion .

    $default  reduce usando la regla 145 (sentencia)


estado 49

  146 sentencia: sentEtiquetada .

    $default  reduce usando la regla 146 (sentencia)


estado 50

  147 sentencia: sentSalto .

    $default  reduce usando la regla 147 (sentencia)


estado 51

  166 sentEtiquetada: IDENTIFICADOR ':' . sentencia
